--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,9 @@ body {
 }
 
 .inline-block1 {
-    
     font-size: 15pt;
     display: inline-block;
     padding: 10px;
-    
 }
 
 a {
@@ -17,7 +15,7 @@ a {
 a:hover {
     color: white;
 }
-
+/* Contact Me Page Styles */
 .contactme {
     text-align: center;
     font-size: 100px;
@@ -25,43 +23,45 @@ a:hover {
 }
 
 .x-logo {
-    position: absolute;
-    margin-top: 0px;
+    position: absolute; 
+    margin-top: -75px;
     margin-left: 1000px;
 }
-
-.fb-logo {
+.fb-logo {  
     position: absolute;
     height: 120px;
     width: auto;
-    margin-top: 50px;
+    margin-top: -25px;
     margin-left: 350px;
 }
-
 .li-logo {
     position: absolute;
     height: 120px;
     width: auto;
-    margin-top: 50px;
+    margin-top: -25px;
     margin-left: 575px;
 }
-
 .ig-logo {
     position: absolute;
     height: 120px;
     width: auto; 
-    margin-top: 50px;
+    margin-top: -25px;
     margin-left: 825px   
 }
 
 .contactForm {
-    position: relative;
+    width: 300px;
+    margin: 0 auto;
+    margin-top: 300px;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
-    margin-top: 350px;
 }
 
 .message {
-    width: 400px;
+    width: 300px;
     height: 50px;
 }
 
